First commit from visual studio

--- a/appsettings.json
+++ b/appsettings.json
@@ -12,7 +12,7 @@
   //}
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=BloodyWeb;User Id=sa;Password=solutions;TrustServerCertificate=true"
+    "DefaultConnection": "Server=SERVERTEST\\SQLDEVELOPER_19;Database=BloodyWeb;User Id=sa;Password=solutions;TrustServerCertificate=true"
   }
   
 
