Add Docker Support

--- a/BlooDyWeb.csproj
+++ b/BlooDyWeb.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>0745b12c-d0c4-41d3-a9c2-f95c2d5080f5</UserSecretsId>
+    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
   </PropertyGroup>
 	
 	<ItemGroup>
